--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy to Server
 on:
   push:
     branches: 
-      - main # main 브랜치에 push될 때만 실행
-      - dev
+      [main, dev] # main 브랜치에 push될 때만 실행
 
 jobs:
   deploy:
