--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: 
       - main
       - dev
+      - 4-github-action
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -22,5 +23,5 @@ jobs:
         script: |
           cd SKN09-FINAL-2Team/senpick/  # 서버에서 실제 프로젝트 위치로 이동
           git pull
-          git checkout dev
+          git checkout 4-github-action
           docker-compose up --build -d
