--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,6 @@ on:
     branches: 
       - main
       - dev
-      - 4-github-action
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -23,5 +22,5 @@ jobs:
         script: |
           cd SKN09-FINAL-2Team/senpick/  # 서버에서 실제 프로젝트 위치로 이동
           git pull
-          git checkout 4-github-action
+          git checkout dev
           docker-compose up --build -d
