--- a/senpick/docker-compose.yml
+++ b/senpick/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: nginx:alpine
     container_name: nginx_proxy
     ports:
-      - "8080:80"
+      - "8080:80" # {host_port}:{port} host_port 를 수정해야 배포시 반영됨 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static
