--- a/senpick/requirements.txt
+++ b/senpick/requirements.txt
@@ -35,8 +35,8 @@ pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
 s3transfer==0.11.5
-selenium==4.31.0
-selenium-stealth==1.0.6
+# selenium==4.31.0
+# selenium-stealth==1.0.6
 setuptools==75.8.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
