--- a/senpick/docker-compose.yml
+++ b/senpick/docker-compose.yml
@@ -13,9 +13,11 @@ services:
     image: nginx:alpine
     container_name: nginx_proxy
     ports:
-      - "8080:80" # {host_port}:{port} host_port 를 수정해야 배포시 반영됨 
+      - "80:80" # {host_port}:{port} host_port 를 수정해야 배포시 반영됨 
+      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static
+      - ./nginx/ssl:/etc/nginx/ssl   # <-- 이거 추가 필요
     depends_on:
       - web
