--- a/senpick/nginx/default.conf
+++ b/senpick/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name senpick.kr;
 
     location / {
         proxy_pass http://web:8000;
@@ -10,5 +10,16 @@ server {
 
     location /static/ {
         alias /code/static/;
+    }
+}
+server {
+    listen 443 ssl;
+    server_name senpick.kr;
+
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+    location / {
+        proxy_pass http://web:8000;
     }
 }
