--- a/senpick/docker-compose.yml
+++ b/senpick/docker-compose.yml
@@ -18,6 +18,6 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static
-      - ./nginx/ssl:/etc/nginx/ssl   # <-- 이거 추가 필요
+      - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
     depends_on:
       - web
