--- a/senpick/nginx/default.conf
+++ b/senpick/nginx/default.conf
@@ -18,6 +18,8 @@ server {
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/senpick.kr/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/senpick.kr/privkey.pem;
 
     location / {
         proxy_pass http://web:8000;
