--- a/senpick/docker-compose.yml
+++ b/senpick/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static
-      - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
+      # - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
+      - ./certbot/senpick.kr:/etc/nginx/ssl:ro
     depends_on:
       - web
