--- a/senpick/docker-compose.yml
+++ b/senpick/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static
-      # - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
-      - ./certbot/senpick.kr:/etc/nginx/ssl:ro
+      - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
+      - /etc/letsencrypt/archive/senpick.kr:/etc/letsencrypt/archive/senpick.kr:ro
     depends_on:
       - web
