update birth recommend card

--- a/senpick/nginx/default.conf
+++ b/senpick/nginx/default.conf
@@ -18,10 +18,14 @@ server {
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    # ssl_certificate /etc/letsencrypt/live/senpick.kr/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/senpick.kr/privkey.pem;
+
+    location /static/ {
+        alias /code/static/;
+    }
 
     location / {
         proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
