--- a/senpick/docker-compose.yml
+++ b/senpick/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static
-      - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
-      - /etc/letsencrypt/archive/senpick.kr:/etc/letsencrypt/archive/senpick.kr:ro
+      - /etc/letsencrypt/live/senpick.kr/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/senpick.kr/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+      # - /etc/letsencrypt/live/senpick.kr:/etc/nginx/ssl:ro
     depends_on:
       - web
