change google login setting test

--- a/senpick/nginx/default.conf
+++ b/senpick/nginx/default.conf
@@ -1,11 +1,13 @@
 server {
     listen 80;
     server_name senpick.kr;
+    return 301 https://$host$request_uri;
 
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /static/ {
@@ -27,5 +29,6 @@ server {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
