--- a/senpick/nginx/default.conf
+++ b/senpick/nginx/default.conf
@@ -30,5 +30,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_set_header X-Forwarded-Proto https;
     }
 }
