--- a/senpick/nginx/default.conf
+++ b/senpick/nginx/default.conf
@@ -8,6 +8,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
     }
 
     location /static/ {
@@ -32,5 +33,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         proxy_set_header X-Forwarded-Proto https;
+        proxy_buffering off;
     }
 }
